Mod 'display' fix overflow issues

--- a/client/src/components/styles/home.scss
+++ b/client/src/components/styles/home.scss
@@ -165,6 +165,7 @@
   width: 100vw;
   display: flex;
   justify-content: center;
+  margin-bottom: 100px;
 }
 
 .bestBar {
